RESOLVED FIXED310425
[ Debug ] Fix WKNavigation.HTTPSFirstWithHTTPRedirect
https://bugs.webkit.org/show_bug.cgi?id=310425
Summary [ Debug ] Fix WKNavigation.HTTPSFirstWithHTTPRedirect
Sihui Liu
Reported 2026-03-20 22:04:58 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-20 22:09:28 PDT
Sihui Liu
Comment 2 2026-03-20 22:23:48 PDT
EWS
Comment 3 2026-03-25 08:08:14 PDT
Committed 309914@main (7ca7678e5e18): <https://commits.webkit.org/309914@main> Reviewed commits have been landed. Closing PR #61067 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.